JumpScript/tests/baselines/reference/scannerES3NumericLiteral4.errors.txt
tests/cases/conformance/scanner/ecmascript3/scannerES3NumericLiteral4.jump(1,3): error TS1124: Digit expected.


==== tests/cases/conformance/scanner/ecmascript3/scannerES3NumericLiteral4.jump (1 errors) ====
    1e
      
!!! error TS1124: Digit expected.